--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header::after {
     bottom: 0;
     width: 100%;
     height: 1px;                       
-    background-color: black;           
+    background-color: #fff2b8;           
 }
 
 nav {
@@ -121,7 +121,7 @@ nav ul li a:hover {
 }
 
 #hero {
-    background-color: #fff9d7; 
+    background-color: #fff1bc; 
     font-family: 'Comic Sans MS', cursive, sans-serif;  
     font-size: 20px;                       
     color: #000000;                        
@@ -130,7 +130,7 @@ nav ul li a:hover {
   
 }
 #hero2 {
-    background-color: #fff9d7;
+    background-color: #fff1bc;
     font-family: 'Comic Sans MS', cursive, sans-serif;  
     color: #000000;
     text-shadow: 0px 0px ;
@@ -147,7 +147,7 @@ section {
     justify-content: space-between;     
     align-items: center;                
     padding: 20px;
-    background-color: #fff9d7;       
+    background-color: #f1ba54;       
 }
 
 .hero-text {
@@ -171,7 +171,7 @@ section {
     font-family: 'Comic Sans MS', cursive, sans-serif; 
     font-size: 18px;                        
     color: #f1ba54;                         
-    background-color: #fff9d7;          
+    background-color: #f1ba54;          
     padding: 10px;                           
     border-radius: 5px;                   
     text-shadow: 1px 1px #000;               
