--- a/preschol.css
+++ b/preschol.css
@@ -257,7 +257,6 @@ section h2 {
 .logo-search {
   display: flex;
   align-items: center;
-  gap: 10px;
 }
 
 .pooh-logo {
@@ -319,3 +318,108 @@ section h2 {
   color: #555;
   text-decoration: none;
 }
+.footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-color: #fff2b8;
+    padding: 40px;
+    font-family: 'Arial', sans-serif;
+  }
+  
+  .footer-left, .footer-center, .footer-contact, .footer-socials {
+    flex: 1;
+    min-width: 220px;
+    margin: 10px;
+  }
+ #sth{
+    font-size: 20px;
+    color: #f2b32c;
+  }
+  #service{
+    font-size: 20px;
+    color: #f2b32c
+  }
+  
+  .logo-search {
+    display: flex;
+    align-items: center;
+  }
+  
+  .pooh-logo {
+    width: 60px;
+    height: auto;
+  }
+  
+  .search-input {
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    width: 180px;
+    color: #fff1bc;
+  }
+  
+  .search-btn {
+    background-color: #f2b32c;
+    border: none;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .footer-desc {
+    margin-top: 20px;
+    color: #333;
+    font-size: 14px;
+  }
+  
+  .footer h3 {
+    font-family: 'Comic Sans MS', cursive;
+    color: #f2b32c;
+    border-bottom: 2px solid #f2b32c;
+    display: inline-block;
+    margin-bottom: 10px;
+  }
+  
+  .footer-contact p, .footer-socials p {
+    margin: 6px 0;
+    color: #333;
+  }
+  
+  .social-icons i {
+    font-size: 30px;
+    margin-right: 15px;
+    color: #f2b32c;
+    cursor: pointer;
+  }
+  
+  .footer-bottom {
+    text-align: center;
+    padding: 20px;
+    background-color: #fff2b8;
+    font-size: 14px;
+  }
+  
+  .footer-bottom a {
+    color: #555;
+    text-decoration: none;
+  }
+  .irish-grover-regular {
+    font-family: "Irish Grover", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  #text{
+    font-family: 'Irish Grover', 'cursive';
+    position: relative;
+    z-index: 2;
+    top: 300px; 
+  }
+   .social-icons img{
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+
+  }
